fixed typewriter size on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,11 @@
 
 
 
-
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
 
 .active {
 	
@@ -40,6 +44,7 @@ body {
 
 
 .bg-primary{
+	
 
 	background-color: #EDFEF4 !important;
 	color: #000 !important;
@@ -136,7 +141,7 @@ nav a {
 
   white-space: nowrap; 
   margin: 0 auto; 
-  letter-spacing: .10em; 
+  letter-spacing: .05em; 
   animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end 8;
@@ -148,6 +153,16 @@ nav a {
   to { width: 100% }
 }
 
+
+@media (max-width: 400px) {
+
+	.typewriter h1 {
+		font-size: 10vw;
+		
+		
+	}
+	
+	}
 
 
 #canvas-overlay-bottom {
